[gd_scene load_steps=11 format=3 uid="uid://b4njf42j38q2w"]

[ext_resource type="Texture2D" uid="uid://dwo6i58118bvk" path="res://Assets/Pistol_0.png" id="1_7qyml"]
[ext_resource type="Script" path="res://Code/BaseGun.gd" id="1_uddhl"]
[ext_resource type="Texture2D" uid="uid://cs3f8ldcijctp" path="res://Assets/Flash.png" id="3_o67jt"]
[ext_resource type="AudioStream" uid="uid://nclb4w6jg6ls" path="res://Assets/BaseShoot.wav" id="4_w5cv5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lsnkk"]
resource_name = "material_0"
transparency = 2
alpha_scissor_threshold = 0.05
alpha_antialiasing_mode = 0
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("1_7qyml")
texture_filter = 0
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_imnbf"]
_surfaces = [{
"aabb": AABB(0.0625, -0.125, -0.5, 0.18751, 0.625, 1.25),
"format": 4097,
"index_count": 156,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 4, 0, 5, 0, 6, 0, 4, 0, 7, 0, 5, 0, 8, 0, 9, 0, 10, 0, 8, 0, 11, 0, 9, 0, 4, 0, 0, 0, 7, 0, 4, 0, 3, 0, 0, 0, 12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 3, 0, 14, 0, 1, 0, 3, 0, 12, 0, 14, 0, 20, 0, 8, 0, 21, 0, 20, 0, 11, 0, 8, 0, 15, 0, 6, 0, 13, 0, 15, 0, 4, 0, 6, 0, 22, 0, 24, 0, 23, 0, 22, 0, 25, 0, 24, 0, 23, 0, 12, 0, 22, 0, 23, 0, 15, 0, 12, 0, 24, 0, 15, 0, 23, 0, 24, 0, 4, 0, 15, 0, 25, 0, 4, 0, 24, 0, 25, 0, 3, 0, 4, 0, 22, 0, 3, 0, 25, 0, 22, 0, 12, 0, 3, 0, 19, 0, 7, 0, 0, 0, 19, 0, 16, 0, 7, 0, 7, 0, 18, 0, 5, 0, 7, 0, 16, 0, 18, 0, 26, 0, 10, 0, 9, 0, 26, 0, 27, 0, 10, 0, 19, 0, 2, 0, 17, 0, 19, 0, 0, 0, 2, 0, 27, 0, 18, 0, 17, 0, 27, 0, 26, 0, 18, 0, 26, 0, 5, 0, 18, 0, 26, 0, 9, 0, 5, 0, 9, 0, 6, 0, 5, 0, 9, 0, 11, 0, 6, 0, 11, 0, 13, 0, 6, 0, 11, 0, 20, 0, 13, 0, 20, 0, 14, 0, 13, 0, 20, 0, 21, 0, 14, 0, 21, 0, 1, 0, 14, 0, 21, 0, 8, 0, 1, 0, 8, 0, 2, 0, 1, 0, 8, 0, 10, 0, 2, 0, 10, 0, 17, 0, 2, 0, 10, 0, 27, 0, 17, 0),
"lods": [0.0211124, PackedByteArray(4, 0, 0, 0, 7, 0, 4, 0, 3, 0, 0, 0, 19, 0, 7, 0, 0, 0, 19, 0, 16, 0, 7, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 27, 0, 18, 0, 17, 0, 27, 0, 26, 0, 18, 0, 20, 0, 8, 0, 21, 0, 20, 0, 11, 0, 8, 0, 26, 0, 8, 0, 11, 0, 26, 0, 27, 0, 8, 0, 22, 0, 24, 0, 23, 0, 22, 0, 25, 0, 24, 0, 23, 0, 14, 0, 22, 0, 23, 0, 15, 0, 14, 0, 20, 0, 14, 0, 15, 0, 20, 0, 21, 0, 14, 0, 24, 0, 15, 0, 23, 0, 24, 0, 4, 0, 15, 0, 11, 0, 15, 0, 4, 0, 11, 0, 20, 0, 15, 0, 11, 0, 4, 0, 7, 0, 26, 0, 11, 0, 7, 0, 26, 0, 7, 0, 18, 0, 7, 0, 16, 0, 18, 0, 25, 0, 4, 0, 24, 0, 25, 0, 3, 0, 4, 0, 22, 0, 3, 0, 25, 0, 22, 0, 14, 0, 3, 0, 21, 0, 3, 0, 14, 0, 21, 0, 8, 0, 3, 0, 8, 0, 0, 0, 3, 0, 8, 0, 17, 0, 0, 0, 19, 0, 0, 0, 17, 0, 8, 0, 27, 0, 17, 0)],
"name": "material_0",
"primitive": 3,
"vertex_count": 28,
"vertex_data": PackedByteArray(0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 0, 0, 0, 0, 128, 62, 138, 255, 167, 62, 245, 255, 247, 62, 0, 0, 128, 62, 154, 255, 171, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 32, 62, 0, 0, 240, 62, 0, 0, 128, 61, 0, 0, 32, 62, 0, 0, 240, 62, 0, 0, 128, 61, 154, 255, 171, 62, 0, 0, 0, 0, 0, 0, 128, 61, 138, 255, 167, 62, 245, 255, 247, 62, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 128, 61, 0, 0, 248, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 248, 62, 0, 0, 0, 0, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 64, 63, 0, 0, 128, 61, 165, 255, 163, 62, 11, 0, 56, 63, 0, 0, 128, 62, 165, 255, 163, 62, 11, 0, 56, 63, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 64, 63, 0, 0, 128, 61, 0, 0, 96, 62, 0, 0, 224, 190, 0, 0, 128, 62, 160, 255, 183, 62, 245, 255, 231, 190, 0, 0, 128, 61, 160, 255, 183, 62, 245, 255, 231, 190, 0, 0, 128, 62, 0, 0, 96, 62, 0, 0, 224, 190, 0, 0, 128, 61, 0, 0, 232, 62, 0, 0, 48, 63, 0, 0, 128, 62, 0, 0, 232, 62, 0, 0, 48, 63, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 64, 63, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 64, 63, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 0, 63, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 0, 63, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 191)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_5wt8t"]
resource_name = "blockbench_export_mesh"
_surfaces = [{
"aabb": AABB(0.0625, -0.125, -0.5, 0.18751, 0.625, 1.25),
"attribute_data": PackedByteArray(0, 0, 192, 62, 0, 0, 32, 62, 0, 0, 8, 62, 160, 1, 176, 61, 0, 0, 192, 62, 0, 0, 168, 61, 0, 0, 16, 62, 0, 0, 48, 62, 0, 0, 44, 63, 0, 0, 200, 62, 0, 0, 224, 62, 0, 0, 154, 62, 0, 0, 46, 63, 104, 0, 156, 62, 0, 0, 224, 62, 0, 0, 192, 62, 0, 0, 128, 60, 16, 122, 225, 62, 0, 0, 224, 61, 4, 197, 48, 63, 0, 0, 128, 60, 4, 197, 48, 63, 0, 0, 224, 61, 16, 122, 225, 62, 0, 0, 128, 62, 0, 0, 96, 63, 0, 0, 32, 62, 204, 221, 35, 63, 0, 0, 128, 62, 204, 221, 35, 63, 0, 0, 32, 62, 0, 0, 96, 63, 0, 0, 192, 62, 146, 237, 10, 63, 0, 0, 144, 62, 146, 237, 242, 62, 0, 0, 192, 62, 146, 237, 242, 62, 0, 0, 144, 62, 146, 237, 10, 63, 0, 0, 32, 63, 0, 0, 24, 63, 0, 0, 8, 63, 189, 227, 5, 63, 0, 0, 32, 63, 189, 227, 5, 63, 0, 0, 8, 63, 0, 0, 24, 63, 0, 0, 16, 62, 0, 0, 48, 62, 0, 0, 128, 60, 0, 0, 184, 61, 0, 0, 8, 62, 160, 1, 176, 61, 0, 0, 0, 0, 0, 0, 32, 62, 0, 0, 224, 61, 0, 0, 176, 62, 0, 0, 128, 60, 0, 0, 176, 62, 0, 0, 128, 60, 16, 122, 225, 62, 0, 0, 224, 61, 16, 122, 225, 62, 0, 0, 80, 63, 0, 0, 192, 62, 0, 0, 46, 63, 104, 0, 156, 62, 0, 0, 76, 63, 0, 0, 158, 62, 0, 0, 44, 63, 0, 0, 200, 62, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 208, 62, 0, 0, 32, 63, 0, 0, 208, 62, 0, 0, 64, 63, 0, 0, 0, 63, 0, 0, 64, 63, 0, 0, 144, 62, 146, 237, 50, 63, 0, 0, 192, 62, 146, 237, 50, 63, 0, 0, 192, 62, 146, 237, 10, 63, 0, 0, 144, 62, 146, 237, 10, 63, 0, 0, 48, 63, 0, 0, 8, 63, 0, 0, 80, 63, 0, 0, 8, 63, 0, 0, 80, 63, 0, 0, 192, 62, 0, 0, 44, 63, 0, 0, 200, 62, 0, 0, 208, 62, 0, 0, 24, 63, 0, 0, 0, 63, 0, 0, 24, 63, 0, 0, 0, 63, 0, 0, 224, 62, 0, 0, 208, 62, 0, 0, 224, 62, 0, 0, 0, 0, 0, 0, 160, 62, 0, 0, 0, 62, 0, 0, 160, 62, 0, 0, 16, 62, 0, 0, 48, 62, 0, 0, 0, 0, 0, 0, 32, 62, 0, 0, 32, 62, 72, 114, 215, 62, 0, 0, 32, 62, 204, 221, 35, 63, 0, 0, 128, 62, 204, 221, 35, 63, 0, 0, 128, 62, 72, 114, 215, 62, 0, 0, 224, 62, 0, 0, 192, 62, 0, 0, 88, 62, 0, 0, 148, 62, 0, 0, 224, 62, 0, 0, 154, 62, 0, 0, 96, 62, 0, 0, 184, 62, 0, 0, 224, 61, 1, 205, 112, 63, 0, 0, 224, 61, 4, 197, 48, 63, 0, 0, 128, 60, 4, 197, 48, 63, 0, 0, 128, 60, 1, 205, 112, 63, 0, 0, 24, 63, 0, 0, 16, 62, 0, 0, 192, 62, 0, 0, 168, 61, 0, 0, 26, 63, 0, 0, 144, 61, 0, 0, 192, 62, 0, 0, 32, 62, 0, 0, 8, 63, 150, 212, 229, 62, 0, 0, 8, 63, 189, 227, 5, 63, 0, 0, 32, 63, 189, 227, 5, 63, 0, 0, 32, 63, 150, 212, 229, 62, 0, 0, 64, 62, 0, 0, 96, 62, 0, 0, 88, 62, 0, 0, 148, 62, 0, 0, 224, 62, 0, 0, 154, 62, 0, 0, 224, 62, 0, 0, 104, 62, 0, 0, 224, 62, 0, 0, 104, 62, 0, 0, 224, 62, 0, 0, 154, 62, 0, 0, 46, 63, 104, 0, 156, 62, 0, 0, 48, 63, 0, 0, 96, 62, 0, 0, 48, 63, 0, 0, 96, 62, 0, 0, 46, 63, 104, 0, 156, 62, 0, 0, 76, 63, 0, 0, 158, 62, 0, 0, 72, 63, 0, 0, 120, 62, 0, 0, 144, 62, 0, 0, 208, 62, 0, 0, 144, 62, 146, 237, 242, 62, 0, 0, 192, 62, 146, 237, 242, 62, 0, 0, 192, 62, 0, 0, 208, 62, 0, 0, 0, 61, 0, 0, 192, 60, 0, 0, 128, 60, 0, 0, 184, 61, 0, 0, 8, 62, 160, 1, 176, 61, 0, 0, 0, 62, 0, 0, 0, 0, 0, 0, 0, 62, 0, 0, 0, 0, 0, 0, 8, 62, 160, 1, 176, 61, 0, 0, 192, 62, 0, 0, 168, 61, 0, 0, 192, 62, 0, 0, 0, 60, 0, 0, 192, 62, 0, 0, 0, 60, 0, 0, 192, 62, 0, 0, 168, 61, 0, 0, 26, 63, 0, 0, 144, 61, 0, 0, 32, 63, 0, 0, 0, 0),
"format": 4119,
"index_count": 156,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 4, 0, 5, 0, 6, 0, 4, 0, 7, 0, 5, 0, 8, 0, 9, 0, 10, 0, 8, 0, 11, 0, 9, 0, 12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 20, 0, 21, 0, 22, 0, 20, 0, 23, 0, 21, 0, 24, 0, 25, 0, 26, 0, 24, 0, 27, 0, 25, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 33, 0, 34, 0, 32, 0, 35, 0, 33, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 61, 0, 62, 0, 60, 0, 63, 0, 61, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 69, 0, 70, 0, 68, 0, 71, 0, 69, 0, 72, 0, 74, 0, 73, 0, 72, 0, 75, 0, 74, 0, 76, 0, 78, 0, 77, 0, 76, 0, 79, 0, 78, 0, 80, 0, 82, 0, 81, 0, 80, 0, 83, 0, 82, 0, 84, 0, 86, 0, 85, 0, 84, 0, 87, 0, 86, 0, 88, 0, 90, 0, 89, 0, 88, 0, 91, 0, 90, 0, 92, 0, 94, 0, 93, 0, 92, 0, 95, 0, 94, 0, 96, 0, 98, 0, 97, 0, 96, 0, 99, 0, 98, 0, 100, 0, 102, 0, 101, 0, 100, 0, 103, 0, 102, 0),
"lods": [0.0211124, PackedByteArray(12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 56, 0, 14, 0, 13, 0, 56, 0, 59, 0, 14, 0, 20, 0, 21, 0, 22, 0, 20, 0, 23, 0, 21, 0, 72, 0, 22, 0, 21, 0, 72, 0, 75, 0, 22, 0, 28, 0, 8, 0, 29, 0, 28, 0, 11, 0, 8, 0, 64, 0, 8, 0, 11, 0, 64, 0, 67, 0, 8, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 18, 0, 41, 0, 40, 0, 19, 0, 18, 0, 88, 0, 18, 0, 19, 0, 88, 0, 91, 0, 18, 0, 44, 0, 32, 0, 45, 0, 44, 0, 4, 0, 32, 0, 83, 0, 32, 0, 4, 0, 83, 0, 87, 0, 32, 0, 83, 0, 4, 0, 7, 0, 76, 0, 83, 0, 7, 0, 76, 0, 7, 0, 61, 0, 7, 0, 63, 0, 61, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 3, 0, 53, 0, 52, 0, 25, 0, 3, 0, 92, 0, 3, 0, 25, 0, 92, 0, 95, 0, 3, 0, 95, 0, 0, 0, 3, 0, 95, 0, 70, 0, 0, 0, 68, 0, 0, 0, 70, 0, 95, 0, 103, 0, 70, 0)],
"material": SubResource("StandardMaterial3D_lsnkk"),
"name": "material_0",
"primitive": 3,
"vertex_count": 104,
"vertex_data": PackedByteArray(0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 0, 0, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 138, 255, 167, 62, 245, 255, 247, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 154, 255, 171, 62, 0, 0, 0, 0, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 0, 0, 32, 62, 0, 0, 240, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 61, 0, 0, 32, 62, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 154, 255, 171, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 138, 255, 167, 62, 245, 255, 247, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 63, 224, 131, 255, 255, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 248, 62, 0, 0, 0, 0, 224, 131, 255, 255, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 248, 62, 0, 0, 0, 0, 224, 131, 255, 255, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 63, 224, 131, 255, 255, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 32, 62, 0, 0, 240, 62, 255, 135, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 0, 0, 255, 135, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 0, 0, 255, 135, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 32, 62, 0, 0, 240, 62, 255, 135, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 64, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 61, 165, 255, 163, 62, 11, 0, 56, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 62, 165, 255, 163, 62, 11, 0, 56, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 64, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 96, 62, 0, 0, 224, 190, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 160, 255, 183, 62, 245, 255, 231, 190, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 160, 255, 183, 62, 245, 255, 231, 190, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 96, 62, 0, 0, 224, 190, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 32, 62, 0, 0, 240, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 165, 255, 163, 62, 11, 0, 56, 63, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 138, 255, 167, 62, 245, 255, 247, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 64, 63, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 61, 0, 0, 232, 62, 0, 0, 48, 63, 255, 127, 101, 230, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 232, 62, 0, 0, 48, 63, 255, 127, 101, 230, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 101, 230, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 101, 230, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 64, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 138, 255, 167, 62, 245, 255, 247, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 165, 255, 163, 62, 11, 0, 56, 63, 0, 0, 255, 127, 255, 127, 254, 191, 0, 0, 128, 61, 0, 0, 32, 62, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 64, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 64, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 0, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 0, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 64, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 64, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 64, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 64, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 0, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 64, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 64, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 32, 62, 0, 0, 240, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 0, 63, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 0, 190, 0, 0, 0, 63, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 32, 62, 0, 0, 240, 62, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 32, 62, 0, 0, 240, 62, 50, 243, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 64, 63, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 0, 190, 0, 0, 0, 63, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 62, 0, 0, 32, 62, 0, 0, 240, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 64, 63, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 0, 0, 96, 62, 0, 0, 224, 190, 136, 136, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 0, 0, 136, 136, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 0, 0, 136, 136, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 96, 62, 0, 0, 224, 190, 136, 136, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 64, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 160, 255, 183, 62, 245, 255, 231, 190, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 154, 255, 171, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 96, 62, 0, 0, 224, 190, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 30, 252, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 248, 62, 0, 0, 0, 0, 255, 127, 30, 252, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 248, 62, 0, 0, 0, 0, 255, 127, 30, 252, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 30, 252, 0, 0, 255, 191, 0, 0, 128, 62, 0, 0, 96, 62, 0, 0, 224, 190, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 154, 255, 171, 62, 0, 0, 0, 0, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 160, 255, 183, 62, 245, 255, 231, 190, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 0, 0, 64, 62, 0, 0, 0, 0, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 191, 255, 223, 0, 0, 0, 0, 255, 191, 0, 0, 128, 62, 160, 255, 183, 62, 245, 255, 231, 190, 255, 223, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 160, 255, 183, 62, 245, 255, 231, 190, 255, 223, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 191, 255, 223, 0, 0, 0, 0, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 160, 255, 183, 62, 245, 255, 231, 190, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 154, 255, 171, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 248, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 248, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 154, 255, 171, 62, 0, 0, 0, 0, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 138, 255, 167, 62, 245, 255, 247, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 138, 255, 167, 62, 245, 255, 247, 62, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 165, 255, 163, 62, 11, 0, 56, 63, 0, 0, 255, 127, 255, 127, 254, 191, 0, 0, 128, 61, 0, 0, 232, 62, 0, 0, 48, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 61, 0, 0, 232, 62, 0, 0, 48, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 61, 165, 255, 163, 62, 11, 0, 56, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 62, 165, 255, 163, 62, 11, 0, 56, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 232, 62, 0, 0, 48, 63, 255, 127, 96, 152, 255, 255, 255, 191, 0, 0, 128, 62, 0, 0, 232, 62, 0, 0, 48, 63, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 165, 255, 163, 62, 11, 0, 56, 63, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 138, 255, 167, 62, 245, 255, 247, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 63, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 63, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 138, 255, 167, 62, 245, 255, 247, 62, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 154, 255, 171, 62, 0, 0, 0, 0, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 0, 0, 248, 62, 0, 0, 0, 0, 255, 255, 255, 127, 255, 255, 0, 128, 0, 0, 128, 62, 0, 0, 248, 62, 0, 0, 0, 0, 255, 255, 255, 127, 255, 255, 0, 128, 0, 0, 128, 62, 154, 255, 171, 62, 0, 0, 0, 0, 255, 255, 255, 127, 254, 255, 0, 128, 0, 0, 128, 62, 160, 255, 183, 62, 245, 255, 231, 190, 255, 255, 255, 127, 254, 255, 255, 255, 0, 0, 128, 62, 0, 0, 0, 63, 0, 0, 0, 191, 255, 255, 255, 127, 254, 255, 0, 128)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_imnbf")

[sub_resource type="Animation" id="Animation_58hsa"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_mos73"]
resource_name = "Shoot"
length = 0.4
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.2, 1, 0, 0, 0.8, 0.4, 1, 0, 0, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.2, 1, 0.0650113, 0, 0, 0.997885, 0.4, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mhab3"]
_data = {
"Idle": SubResource("Animation_58hsa"),
"Shoot": SubResource("Animation_mos73")
}

[node name="BaseGun" type="Node3D"]
script = ExtResource("1_uddhl")

[node name="Mesh" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("ArrayMesh_5wt8t")
skeleton = NodePath("")

[node name="HitRay" type="RayCast3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.160128, 0.384835, -0.448839)

[node name="Flash" type="Sprite3D" parent="Mesh"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0.177348, 0.45142, -0.482163)
visible = false
billboard = 1
texture_filter = 0
texture = ExtResource("3_o67jt")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.352048, 0)
stream = ExtResource("4_w5cv5")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mhab3")
}

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
